# llfs

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  conanfile.py  cor.yml  output.txt  supported_platforms.json
.github/workflows/: main.yml
doc/: data_packing_serialization.md  design.md  multi_page_transactions.md  new_prepare_commit_design.md  page_allocation.md  volume_trimmer.md
doc/proposals/: lock_free_cache.md
scripts/: ci-build-setup.dockerfile  ci-build-with-docker.sh  ci-build.sh  ci-job-setup.dockerfile  ci-job-with-docker.sh  ci-job.sh  ci-print-diagnostics.sh
src/: CMakeLists.txt
src/common/: test_environment.cpp
src/llfs/: api_types.hpp  appendable_job.cpp  appendable_job.hpp  array_packer.hpp  basic_log_storage_driver.hpp  basic_log_storage_reader.hpp  basic_ring_buffer_device.hpp  basic_ring_buffer_log_device.hpp  bloom_filter.cpp  bloom_filter.hpp  bloom_filter.test.cpp  bloom_filter_page_view.cpp  bloom_filter_page_view.hpp  buffer.hpp  buffer.test.cpp  buffered_log_data_reader.cpp  buffered_log_data_reader.hpp  buffered_log_data_reader.test.cpp  cache.hpp  cache.test.cpp  caller.hpp  committable_page_cache_job.cpp  committable_page_cache_job.hpp  config.hpp  confirm.hpp  constants.hpp  conversion.hpp  crc.cpp  crc.hpp  data_layout.cpp  data_layout.hpp  data_packer.cpp  data_packer.hpp  data_packer.test.cpp  data_packer_arena.cpp  data_packer_arena.hpp  data_reader.cpp  data_reader.hpp  define_packed_type.hpp  file_log_driver.cpp  (+450 more)
src/llfs/experimental/: semantic_version.hpp
src/llfs/file_log_driver/: active_file.cpp  active_file.hpp  concurrent_shared_state.cpp  config.cpp  flush_task_main.cpp  flush_task_main.hpp  location.cpp  segment_file.cpp
src/llfs/llfs/: appendable_job.cpp  appendable_job.hpp  array_packer.hpp  basic_log_storage_driver.hpp  basic_log_storage_reader.hpp  basic_ring_buffer_device.hpp  bloom_filter.cpp  bloom_filter.hpp  bloom_filter.test.cpp  buffer.hpp  cache.hpp  cache.test.cpp  caller.hpp  config.hpp  confirm.hpp  constants.hpp  crc.cpp  crc.hpp  data_layout.cpp  data_layout.hpp  data_packer.cpp  data_packer.hpp  data_packer.test.cpp  data_reader.cpp  data_reader.hpp  define_packed_type.hpp  file_log_driver.cpp  file_log_driver.hpp  file_log_driver.test.cpp  file_offset_ptr.hpp  file_segment_ref.cpp  file_segment_ref.hpp  filesystem.cpp  filesystem.hpp  filesystem_page_device.cpp  filesystem_page_device.hpp  filesystem_page_device.test.cpp  finalized_page_cache_job.cpp  finalized_page_cache_job.hpp  int_types.hpp  (+176 more)
src/llfs/llfs/experimental/: semantic_version.hpp
src/llfs/llfs/file_log_driver/: active_file.cpp  active_file.hpp  concurrent_shared_state.cpp  config.cpp  flush_task_main.cpp  flush_task_main.hpp  location.cpp  segment_file.cpp
src/llfs/llfs/testing/: fake_log_device.cpp  fake_log_device.hpp  fake_page_cache.hpp  fake_page_device.cpp  fake_page_device.hpp
src/llfs/page_allocator/: page_allocator.cpp  page_allocator.hpp  page_allocator.test.cpp  page_allocator_attachment.hpp  page_allocator_config.cpp  page_allocator_config.hpp  page_allocator_events.cpp  page_allocator_events.hpp  page_allocator_lru.hpp  page_allocator_metrics.hpp  page_allocator_object_base.hpp  page_allocator_recovery_visitor.hpp  page_allocator_ref_count.hpp  page_allocator_runtime_options.hpp  page_allocator_state.cpp  page_allocator_state.hpp  page_allocator_state_no_lock.cpp  page_allocator_state_no_lock.hpp
src/llfs/testing/: fake_log_device.cpp  fake_log_device.hpp  fake_page_cache.hpp  fake_page_device.cpp  fake_page_device.hpp  mock_slot_visitor_fn.hpp  packed_type_test_fixture.hpp  scenario_runner.hpp  test_config.cpp  test_config.hpp  util.cpp  util.hpp
src/llfs_cli/: arena_command.cpp  arena_command.hpp  cache_command.cpp  cache_command.hpp  list_command.cpp  list_command.hpp  main.cpp
src/llfs_cli/llfs_cli/: arena_command.cpp  arena_command.hpp  cache_command.cpp  cache_command.hpp  main.cpp
src/llfs_fuse/: main.cpp  mem_file_handle.hpp  mem_fuse.cpp  mem_fuse.hpp  mem_inode.cpp  mem_inode.hpp
